--- a/lk17.html
+++ b/lk17.html
@@ -588,11 +588,113 @@
               </div>
             </div>
           </div>
+          <div class="modal_add_points">
+            <a href="#" class="closebig"></a>
+            <h2>Начислить / списать средства</h2>
+            <div class="component_body">
+              <div class="line_param_input">
+                <div class="l_p">
+                  <div class="line_param">
+                    <div class="line_param_top">
+                      Баланс
+                    </div>
+                    <div class="line_param_bottom">
+                      18324
+                    </div>
+                  </div>
+                </div>
+                <div class="l_p l_p_adaptive">
+                  <div class="line_param">
+                    <div class="line_param_top">
+                      ЛО
+                    </div>
+                    <div class="line_param_bottom">
+                      0
+                    </div>
+                  </div>
+                  <div class="line_param">
+                    <div class="line_param_top">
+                      Резерв
+                    </div>
+                    <div class="line_param_bottom">
+                      100
+                    </div>
+                  </div>
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Партнер-получатель</label>
+                    <a href="#" class="line_param_down"></a>
+                  </div>
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Количество к передаче</label>
+                  </div>
+                  <div class="nav_links">
+                    <a class="brd_green fill w50" href="#" style="float: right">Перевести</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="component_body">
+              <h3>Начисление / Списание средств</h3>
+              <div class="line_param_input">
+                <div class="l_p">
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Партнер-получатель</label>
+                  </div>
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Комментарий</label>
+                  </div>
+                </div>
+                <div class="l_p l_p_adaptive">
+                  <div class="line_param">
+                    <div class="line_param_top">
+                      ЛО
+                    </div>
+                    <div class="line_param_bottom">
+                      0
+                    </div>
+                  </div>
+                  <div class="line_param">
+                    <div class="line_param_top">
+                      Резерв
+                    </div>
+                    <div class="line_param_bottom">
+                      100
+                    </div>
+                  </div>
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Партнер-получатель</label>
+                    <a href="#" class="line_param_down"></a>
+                  </div>
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Количество к передаче</label>
+                  </div>
+                  <div class="nav_links">
+                    <a class="brd_green fill w50" href="#" style="float: right">Перевести</a>
+                  </div>
+                </div>
+                <div class="r_p">
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Сумма</label>
+                  </div>
+                  <div class="nav_links">
+                    <a class="brd_green fill w50" href="#" style="width: 100%">Перевести</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="footer">
         <div class="footer_line footer_line_adaptive">
-          <a href="#" class="footer_line_link">Начислить / списать средства</a>
+          <a href="#" class="footer_line_link add_points">Начислить / списать средства</a>
           <a href="#" class="footer_line_link send_points">Перевести между лицевыми счетами</a>
         </div>
       </div>
