--- a/lk5.html
+++ b/lk5.html
@@ -187,6 +187,24 @@
                       </th>
                       <th>
                         <div>
+                          <span>ФИО покупателя</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>ID партнера</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
                           <span>ID покупателя</span>
                         </div>
                         <div class="table_array">
@@ -205,25 +223,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>ФИО покупателя</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
                           <span>Название склада краткое</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
-                          <span>ID партнера</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -257,15 +257,6 @@
                           <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
                         </div>
                       </th>
-                      <th>
-                        <div>
-                          <span>Количество</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
                     </tr>
                   </thead>
                   <tbody>
@@ -273,127 +264,120 @@
                     <td>
                       <div class="lin_t_top">
                         <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
+                        <a href="#" class="lt3 open_view">Просмотр</a>
                       </div>
                     </td>
                     <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>234589</td>
                     <td>Круглова Л.А.</td>
+                    <td>234589</td>
                     <td>805903</td>
                     <td>234589</td>
+                    <td>Дистрибьюторская</td>
                     <td>Продажа</td>
                     <td>758739</td>
                     <td>Большой и длинный комментарий</td>
-                    <td>12847</td>
                   </tr>
                   <tr>
                     <td>
                       <div class="lin_t_top">
                         <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
+                        <a href="#" class="lt3 open_view">Просмотр</a>
                       </div>
                     </td>
                     <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>234589</td>
                     <td>Круглова Л.А.</td>
+                    <td>234589</td>
                     <td>805903</td>
                     <td>234589</td>
+                    <td>Дистрибьюторская</td>
                     <td>Продажа</td>
                     <td>758739</td>
                     <td>Большой и длинный комментарий</td>
-                    <td>12847</td>
                   </tr>
                   <tr>
                     <td>
                       <div class="lin_t_top">
                         <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
+                        <a href="#" class="lt3 open_view">Просмотр</a>
                       </div>
                     </td>
                     <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>234589</td>
                     <td>Круглова Л.А.</td>
+                    <td>234589</td>
                     <td>805903</td>
                     <td>234589</td>
+                    <td>Дистрибьюторская</td>
                     <td>Продажа</td>
                     <td>758739</td>
                     <td>Большой и длинный комментарий</td>
-                    <td>12847</td>
                   </tr>
                   <tr>
                     <td>
                       <div class="lin_t_top">
                         <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
+                        <a href="#" class="lt3 open_view">Просмотр</a>
                       </div>
                     </td>
                     <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>234589</td>
                     <td>Круглова Л.А.</td>
+                    <td>234589</td>
                     <td>805903</td>
                     <td>234589</td>
-                    <td>Возврат</td>
+                    <td>Дистрибьюторская</td>
+                    <td>Продажа</td>
                     <td>758739</td>
                     <td>Большой и длинный комментарий</td>
-                    <td>12847</td>
                   </tr>
                   <tr>
                     <td>
                       <div class="lin_t_top">
                         <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
+                        <a href="#" class="lt3 open_view">Просмотр</a>
                       </div>
                     </td>
                     <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>234589</td>
                     <td>Круглова Л.А.</td>
+                    <td>234589</td>
                     <td>805903</td>
                     <td>234589</td>
-                    <td>Возврат</td>
+                    <td>Дистрибьюторская</td>
+                    <td>Продажа</td>
                     <td>758739</td>
                     <td>Большой и длинный комментарий</td>
-                    <td>12847</td>
                   </tr>
                   <tr>
                     <td>
                       <div class="lin_t_top">
                         <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
+                        <a href="#" class="lt3 open_view">Просмотр</a>
                       </div>
                     </td>
                     <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>234589</td>
                     <td>Круглова Л.А.</td>
+                    <td>234589</td>
                     <td>805903</td>
                     <td>234589</td>
-                    <td>Возврат</td>
+                    <td>Дистрибьюторская</td>
+                    <td>Продажа</td>
                     <td>758739</td>
                     <td>Большой и длинный комментарий</td>
-                    <td>12847</td>
                   </tr>
                   <tr>
                     <td>
                       <div class="lin_t_top">
                         <span>R2020-000228</span>
-                        <a href="#" class="lt3">Просмотр</a>
+                        <a href="#" class="lt3 open_view">Просмотр</a>
                       </div>
                     </td>
                     <td>29.10.20</td>
-                    <td>Дистрибьюторская</td>
-                    <td>234589</td>
                     <td>Круглова Л.А.</td>
+                    <td>234589</td>
                     <td>805903</td>
                     <td>234589</td>
-                    <td>Возврат</td>
+                    <td>Дистрибьюторская</td>
+                    <td>Продажа</td>
                     <td>758739</td>
                     <td>Большой и длинный комментарий</td>
-                    <td>12847</td>
                   </tr>
                   </tbody>
                 </table>
@@ -527,6 +511,131 @@
               </div>
             </div>
           </div>
+          <div class="modal_view">
+            <a href="#" class="closebig"></a>
+            <h3>Накладная № 2020-000255</h3>
+            <div class="component_body">
+              <div class="f_part" style="padding-bottom: 0;">
+                <div class="middle_part">
+                  <div class="nav_top">
+                    <ul>
+                      <li><a href="#">Печать документа</a></li>
+                    </ul>
+                  </div>
+                  <table class="otch_p bordered">
+                    <thead>
+                    <tr class="head_t">
+                      <th>№</th>
+                      <th>Артикул</th>
+                      <th>Товар</th>
+                      <th>Цена розничная</th>
+                      <th>Цена продажи</th>
+                      <th>Скидка</th>
+                      <th>Баллов за единицу</th>
+                      <th>Кол-во</th>
+                      <th>Стоимость</th>
+                      <th>Возвращено</th>
+                      <th>Баллов всего</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    <tr>
+                      <td>42451467</td>
+                      <td>42451467</td>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>15%</td>
+                      <td>34</td>
+                      <td>34</td>
+                      <td>1076.40</td>
+                      <td>1076.40</td>
+                      <td>10.3</td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="footer">
@@ -543,9 +652,8 @@
               <div class="l_p">
                 <div class="line_param_input">
                   <div class="label_in">
-<!--                    <input type="text" class="tinput" />-->
                     <input type="text" class="tinput tinput_menu" />
-                    <label class="tlabel" for>Склад обслуживания</label>
+                    <label class="tlabel">Склад обслуживания покупателя</label>
                     <span class="array_down"></span>
                     <ul class="sklad_menu">
                       <li>Свой</li>
