--- a/lk7.html
+++ b/lk7.html
@@ -191,7 +191,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>ID партнера</span>
+                          <span>ID получателя баллов</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -435,9 +435,8 @@
               <div class="l_p">
                 <div class="line_param_input">
                   <div class="label_in">
-                    <!--                    <input type="text" class="tinput" />-->
                     <input type="text" class="tinput tinput_menu" />
-                    <label class="tlabel" for>Склад обслуживания</label>
+                    <label class="tlabel">Склад обслуживания покупателя</label>
                     <span class="array_down"></span>
                     <ul class="sklad_menu">
                       <li>Свой</li>
@@ -449,7 +448,7 @@
                 <div class="line_param_input">
                   <div class="label_in">
                     <input type="text" class="tinput" />
-                    <label class="tlabel" for>Документы</label>
+                    <label class="tlabel">ID / ФИО получателя баллов</label>
                     <span class="array_down"></span>
                   </div>
                 </div>
