--- a/lk11.html
+++ b/lk11.html
@@ -161,6 +161,7 @@
                       <th>ФИО</th>
                       <th>Тип соглашения</th>
                       <th>Расчетный ранг</th>
+                      <th>Ранг на начало</th>
                       <th>Скидка</th>
                       <th>Лицевой счет</th>
                       <th>ЛО</th>
@@ -195,42 +196,6 @@
                         </div>
                       </td>
                       <td>Дистрибьютор</td>
-                      <td>Консультант</td>
-                      <td>33</td>
-                      <td>
-                        <div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
-                        </div>
-                      </td>
-                      <td>33,24</td>
-                      <td>13,4</td>
-                      <td>45</td>
-                      <td>0</td>
-                      <td>24</td>
-                      <td>1235</td>
-                      <td>0</td>
-                    </tr>
-                    <tr class="tooltip_block">
-                      <td>
-                        <div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
-                          <span class="lt3">Томск-Кондырева</span>
-                        </div>
-                      </td>
-                      <td>
-                        <span>Михайлов Д. И.</span>
-                        <div class="tooltip_block_hover">
-                          <img src="./images/closebig.svg" alt="closebig" class="tooltip_block_hover_close">
-                          <div style="width: 90%">
-                            <h2 class="tooltip_block_hover_title">Перейти на страницы</h2>
-                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
-                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
-                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
-                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
-                          </div>
-                          <div class="triangle"></div>
-                        </div>
-                      </td>
                       <td>Дистрибьютор</td>
                       <td>Консультант</td>
                       <td>33</td>
@@ -269,42 +234,6 @@
                         </div>
                       </td>
                       <td>Дистрибьютор</td>
-                      <td>Консультант</td>
-                      <td>33</td>
-                      <td>
-                        <div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
-                        </div>
-                      </td>
-                      <td>33,24</td>
-                      <td>13,4</td>
-                      <td>45</td>
-                      <td>0</td>
-                      <td>24</td>
-                      <td>1235</td>
-                      <td>0</td>
-                    </tr>
-                    <tr class="tooltip_block">
-                      <td>
-                        <div>
-                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
-                          <span class="lt3">Томск-Кондырева</span>
-                        </div>
-                      </td>
-                      <td>
-                        <span>Михайлов Д. И.</span>
-                        <div class="tooltip_block_hover">
-                          <img src="./images/closebig.svg" alt="closebig" class="tooltip_block_hover_close">
-                          <div style="width: 90%">
-                            <h2 class="tooltip_block_hover_title">Перейти на страницы</h2>
-                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
-                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
-                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
-                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
-                          </div>
-                          <div class="triangle"></div>
-                        </div>
-                      </td>
                       <td>Дистрибьютор</td>
                       <td>Консультант</td>
                       <td>33</td>
@@ -342,6 +271,83 @@
                           <div class="triangle"></div>
                         </div>
                       </td>
+                      <td>Дистрибьютор</td>
+                      <td>Дистрибьютор</td>
+                      <td>Консультант</td>
+                      <td>33</td>
+                      <td>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
+                        </div>
+                      </td>
+                      <td>33,24</td>
+                      <td>13,4</td>
+                      <td>45</td>
+                      <td>0</td>
+                      <td>24</td>
+                      <td>1235</td>
+                      <td>0</td>
+                    </tr>
+                    <tr class="tooltip_block">
+                      <td>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
+                          <span class="lt3">Томск-Кондырева</span>
+                        </div>
+                      </td>
+                      <td>
+                        <span>Михайлов Д. И.</span>
+                        <div class="tooltip_block_hover">
+                          <img src="./images/closebig.svg" alt="closebig" class="tooltip_block_hover_close">
+                          <div style="width: 90%">
+                            <h2 class="tooltip_block_hover_title">Перейти на страницы</h2>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                          </div>
+                          <div class="triangle"></div>
+                        </div>
+                      </td>
+                      <td>Дистрибьютор</td>
+                      <td>Дистрибьютор</td>
+                      <td>Консультант</td>
+                      <td>33</td>
+                      <td>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
+                        </div>
+                      </td>
+                      <td>33,24</td>
+                      <td>13,4</td>
+                      <td>45</td>
+                      <td>0</td>
+                      <td>24</td>
+                      <td>1235</td>
+                      <td>0</td>
+                    </tr>
+                    <tr class="tooltip_block">
+                      <td>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
+                          <span class="lt3">Томск-Кондырева</span>
+                        </div>
+                      </td>
+                      <td>
+                        <span>Михайлов Д. И.</span>
+                        <div class="tooltip_block_hover">
+                          <img src="./images/closebig.svg" alt="closebig" class="tooltip_block_hover_close">
+                          <div style="width: 90%">
+                            <h2 class="tooltip_block_hover_title">Перейти на страницы</h2>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                            <a href="#" class="tooltip_block_hover_link">История показателей партнёра по периодам</a>
+                          </div>
+                          <div class="triangle"></div>
+                        </div>
+                      </td>
+                      <td>Дистрибьютор</td>
                       <td>Дистрибьютор</td>
                       <td>Консультант</td>
                       <td>33</td>
