--- a/lk14.html
+++ b/lk14.html
@@ -146,146 +146,178 @@
                 <a class="brd_green fill w50 add_partner add_partner_adaptive" href="#" style="width: auto; margin-top: 0; float: right">Создать новый запрос</a>
               </div>
             </div>
+          </div>
+          <div class="component_body">
             <div class="f_part">
-              <div class="nav_top">
-                <ul>
-                  <li><a href="#">Экспорт в xls</a></li>
-                </ul>
-              </div>
               <div class="middle_part">
-                <table class="otch_p fixtable">
+                <table class="otch_p bordered">
                   <thead>
-                  <tr class="head_t">
-                    <th>Номер</th>
-                    <th>ФИО</th>
-                    <th>Ранг на начало</th>
-                    <th>Расчетный ранг</th>
-                    <th>Скидка</th>
-                    <th>Лицевой счет</th>
-                    <th>ЛО</th>
-                    <th>ГО</th>
-                    <th>НГО</th>
-                    <th>КО</th>
-                    <th>ОО</th>
-                    <th>Резерв</th>
-                  </tr>
+                    <tr class="head_t">
+                      <th style="width: 15%">
+                        <div>
+                          <span>ID заявки П/П</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Дата</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th style="width: 10%">
+                        <div>
+                          <span>№ дочернего склада</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Наименование вышестоящего склада</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Сумма</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Баллы</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Тип склада</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Статус</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                    </tr>
                   </thead>
                   <tbody>
-                  <tr>
-                    <td>
-                      <div>
-                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
-                        <span class="lt3">Томск-Кондырева</span>
-                      </div>
-                    </td>
-                    <td>Михайлов Д. И.</td>
-                    <td>Прив.Клиент</td>
-                    <td>Консультант</td>
-                    <td>33</td>
-                    <td>
-                      <div>
-                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
-                      </div>
-                    </td>
-                    <td>33,24</td>
-                    <td>13,4</td>
-                    <td>45</td>
-                    <td>0</td>
-                    <td>24</td>
-                    <td>1235</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div>
-                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
-                        <span class="lt3">Томск-Кондырева</span>
-                      </div>
-                    </td>
-                    <td>Михайлов Д. И.</td>
-                    <td>Прив.Клиент</td>
-                    <td>Консультант</td>
-                    <td>33</td>
-                    <td>
-                      <div>
-                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
-                      </div>
-                    </td>
-                    <td>33,24</td>
-                    <td>13,4</td>
-                    <td>45</td>
-                    <td>0</td>
-                    <td>24</td>
-                    <td>1235</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div>
-                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
-                        <span class="lt3">Томск-Кондырева</span>
-                      </div>
-                    </td>
-                    <td>Михайлов Д. И.</td>
-                    <td>Прив.Клиент</td>
-                    <td>Консультант</td>
-                    <td>33</td>
-                    <td>
-                      <div>
-                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
-                      </div>
-                    </td>
-                    <td>33,24</td>
-                    <td>13,4</td>
-                    <td>45</td>
-                    <td>0</td>
-                    <td>24</td>
-                    <td>1235</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div>
-                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
-                        <span class="lt3">Томск-Кондырева</span>
-                      </div>
-                    </td>
-                    <td>Михайлов Д. И.</td>
-                    <td>Прив.Клиент</td>
-                    <td>Консультант</td>
-                    <td>33</td>
-                    <td>
-                      <div>
-                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
-                      </div>
-                    </td>
-                    <td>33,24</td>
-                    <td>13,4</td>
-                    <td>45</td>
-                    <td>0</td>
-                    <td>24</td>
-                    <td>1235</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div>
-                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
-                        <span class="lt3">Томск-Кондырева</span>
-                      </div>
-                    </td>
-                    <td>Михайлов Д. И.</td>
-                    <td>Прив.Клиент</td>
-                    <td>Консультант</td>
-                    <td>33</td>
-                    <td>
-                      <div>
-                        <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
-                      </div>
-                    </td>
-                    <td>33,24</td>
-                    <td>13,4</td>
-                    <td>45</td>
-                    <td>0</td>
-                    <td>24</td>
-                    <td>1235</td>
-                  </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
+                          </div>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
+                        </div>
+                      </td>
+                      <td>02.10.2020 03:53:26</td>
+                      <td>331</td>
+                      <td>Ульяновск-Петракова (Кондырева )</td>
+                      <td>2333321</td>
+                      <td>24</td>
+                      <td>Выщестоящий партнер</td>
+                      <td>Заказ создан</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
+                          </div>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
+                        </div>
+                      </td>
+                      <td>02.10.2020 03:53:26</td>
+                      <td>331</td>
+                      <td>Ульяновск-Петракова (Кондырева )</td>
+                      <td>2333321</td>
+                      <td>24</td>
+                      <td>Выщестоящий партнер</td>
+                      <td>Заказ создан</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
+                          </div>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
+                        </div>
+                      </td>
+                      <td>02.10.2020 03:53:26</td>
+                      <td>331</td>
+                      <td>Ульяновск-Петракова (Кондырева )</td>
+                      <td>2333321</td>
+                      <td>24</td>
+                      <td>Выщестоящий партнер</td>
+                      <td>Заказ создан</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
+                          </div>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
+                        </div>
+                      </td>
+                      <td>02.10.2020 03:53:26</td>
+                      <td>331</td>
+                      <td>Ульяновск-Петракова (Кондырева )</td>
+                      <td>2333321</td>
+                      <td>24</td>
+                      <td>Выщестоящий партнер</td>
+                      <td>Заказ создан</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
+                          </div>
+                          <a href="#" class="lt3 create_account">Просмотр / Редактирование</a>
+                        </div>
+                      </td>
+                      <td>02.10.2020 03:53:26</td>
+                      <td>331</td>
+                      <td>Ульяновск-Петракова (Кондырева )</td>
+                      <td>2333321</td>
+                      <td>24</td>
+                      <td>Выщестоящий партнер</td>
+                      <td>Заказ создан</td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
