--- a/lk15.html
+++ b/lk15.html
@@ -215,7 +215,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>ID партнера</span>
+                          <span>ID получателя баллов</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -256,7 +256,6 @@
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
-                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
@@ -275,7 +274,6 @@
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
-                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
@@ -294,7 +292,6 @@
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
-                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
@@ -313,7 +310,6 @@
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
-                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
@@ -602,9 +598,8 @@
               <div class="l_p">
                 <div class="line_param_input">
                   <div class="label_in">
-                    <!--                    <input type="text" class="tinput" />-->
                     <input type="text" class="tinput tinput_menu" />
-                    <label class="tlabel" for>Склад обслуживания</label>
+                    <label class="tlabel">Склад обслуживания покупателя </label>
                     <span class="array_down"></span>
                     <ul class="sklad_menu">
                       <li>Свой</li>
@@ -616,7 +611,7 @@
                 <div class="line_param_input">
                   <div class="label_in">
                     <input type="text" class="tinput" />
-                    <label class="tlabel" for>Документы</label>
+                    <label class="tlabel">ID / ФИО получателя баллов</label>
                     <span class="array_down"></span>
                   </div>
                 </div>
@@ -625,7 +620,7 @@
                 <div class="line_param_input">
                   <div class="label_in">
                     <input type="text" class="tinput" required />
-                    <label class="tlabel" for>ID / ФИО покупателя</label>
+                    <label class="tlabel">ID / ФИО покупателя</label>
                   </div>
                 </div>
                 <div class="nav_links">
