--- a/lk6.html
+++ b/lk6.html
@@ -149,12 +149,13 @@
           <div class="component_body">
             <div class="f_part">
               <div class="middle_part">
-                <table class="otch_p bordered">
-                  <thead>
+                <div style="overflow-x: scroll">
+                  <table class="otch_p bordered">
+                    <thead>
                     <tr class="head_t table_returns">
-                      <th style="width: 11%;">
+                      <th>
                         <div>
-                          <span>Номер / Действия</span>
+                          <span>Номер накладной продажи</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -163,7 +164,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>Дата</span>
+                          <span>Дата сервера</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -172,7 +173,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>Тип продаж</span>
+                          <span>Получатель баллов</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -181,7 +182,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>ID покупателя</span>
+                          <span>ID получателя баллов</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -190,34 +191,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>Покупатель</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
-                          <span>ID партнера</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
-                          <span>Партнер</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
-                          <span>Комментарий</span>
+                          <span>Сумма</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -225,82 +199,71 @@
                         </div>
                       </th>
                     </tr>
-                  </thead>
-                  <tbody>
+                    </thead>
+                    <tbody>
                     <tr>
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
-                            <span style="float: left;">R2020-000228</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                            <span style="float: left;">2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3">Просмотр</a>
+                          <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
-                      <td>29.10.20</td>
-                      <td>Дистрибьюторская</td>
-                      <td>921005</td>
-                      <td>Круглова Л.А.</td>
-                      <td>805903</td>
-                      <td>Кондырев</td>
-                      <td>tt - test</td>
+                      <td>23.10.2020</td>
+                      <td>Кондырева Я. В.</td>
+                      <td>910283</td>
+                      <td>897199</td>
                     </tr>
                     <tr>
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
-                            <span style="float: left;">R2020-000228</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                            <span style="float: left;">2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3">Просмотр</a>
+                          <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
-                      <td>29.10.20</td>
-                      <td>Дистрибьюторская</td>
-                      <td>921005</td>
-                      <td>Круглова Л.А.</td>
-                      <td>805903</td>
-                      <td>Кондырев</td>
-                      <td>tt - test</td>
+                      <td>23.10.2020</td>
+                      <td>Кондырева Я. В.</td>
+                      <td>910283</td>
+                      <td>897199</td>
                     </tr>
                     <tr>
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
-                            <span style="float: left;">R2020-000228</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                            <span style="float: left;">2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3">Просмотр</a>
+                          <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
-                      <td>29.10.20</td>
-                      <td>Дистрибьюторская</td>
-                      <td>921005</td>
-                      <td>Круглова Л.А.</td>
-                      <td>805903</td>
-                      <td>Кондырев</td>
-                      <td>tt - test</td>
+                      <td>23.10.2020</td>
+                      <td>Кондырева Я. В.</td>
+                      <td>910283</td>
+                      <td>897199</td>
                     </tr>
                     <tr>
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
-                            <span style="float: left;">R2020-000228</span>
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                            <span style="float: left;">2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
-                          <a href="#" class="lt3">Просмотр</a>
+                          <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
-                      <td>29.10.20</td>
-                      <td>Дистрибьюторская</td>
-                      <td>921005</td>
-                      <td>Круглова Л.А.</td>
-                      <td>805903</td>
-                      <td>Кондырев</td>
-                      <td>tt - test</td>
+                      <td>23.10.2020</td>
+                      <td>Кондырева Я. В.</td>
+                      <td>910283</td>
+                      <td>897199</td>
                     </tr>
-                  </tbody>
-                </table>
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
