--- a/lk10.html
+++ b/lk10.html
@@ -156,7 +156,7 @@
                   <tr class="head_t">
                     <th>
                       <div>
-                        <span>Дата</span>
+                        <span>Дата создания (сервер)</span>
                       </div>
                       <div class="table_array">
                         <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
