--- a/lk15.html
+++ b/lk15.html
@@ -179,7 +179,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>Дата сервера</span>
+                          <span>Дата создания (сервер)</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
