--- a/lk6.html
+++ b/lk6.html
@@ -164,7 +164,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>Дата сервера</span>
+                          <span>Дата создания (сервер)</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -205,7 +205,6 @@
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
-                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
@@ -220,7 +219,6 @@
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
-                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
@@ -235,7 +233,6 @@
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
-                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
@@ -250,7 +247,6 @@
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
-                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
