--- a/lk12.html
+++ b/lk12.html
@@ -159,7 +159,7 @@
                     </th>
                     <th>
                       <div>
-                        <span>Дата</span>
+                        <span>Дата создания (сервер)</span>
                       </div>
                       <div class="table_array">
                         <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
