--- a/lk5.html
+++ b/lk5.html
@@ -178,7 +178,7 @@
                     </th>
                       <th>
                         <div>
-                          <span>Дата создания</span>
+                          <span>Дата создания (сервер)</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
