--- a/lk11.html
+++ b/lk11.html
@@ -580,7 +580,7 @@
           <div class="modal_line">
             <a href="#" class="closebig"></a>
             <h3>Фильтры поиска</h3>
-            <div class="component_body">
+            <div class="component_body" style="margin: 30px 0">
               <div class="line_param_input line_param_input_t">
                 <div class="modal_check_block">
                   <input type="checkbox" class="line_param_checkbox" id="period" checked/>
@@ -595,10 +595,32 @@
                   <label class="line_param_label" for="personal" style="margin-left: 20px;">Показывать партнеров нижестоящих складов</label>
                 </div>
               </div>
-              <div class="r_p" style="float: right; padding-right: 0">
+            </div>
+            <div class="component_body">
+              <div class="l_p">
+                <div class="line_param_input">
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Тип соглашения</label>
+                  </div>
+                </div>
+                <div class="line_param_input">
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Ранг расчетный</label>
+                  </div>
+                </div>
+              </div>
+              <div class="r_p">
+                <div class="line_param_input">
+                  <div class="label_in">
+                    <input type="text" class="tinput" required />
+                    <label class="tlabel" for>Ранг на начало</label>
+                  </div>
+                </div>
                 <div class="nav_links">
                   <a class="brd_green fill w50" href="#">Показать</a>
-                  <a class="brd_green w50 last" href="#" style="margin-right: 0">Сбросить</a>
+                  <a class="brd_green w50 last" href="#">Сбросить</a>
                 </div>
               </div>
             </div>
