--- a/lk5.html
+++ b/lk5.html
@@ -187,6 +187,15 @@
                       </th>
                       <th>
                         <div>
+                          <span>ID покупателя</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
                           <span>ФИО покупателя</span>
                         </div>
                         <div class="table_array">
@@ -196,7 +205,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>ID партнера</span>
+                          <span>ID получателя баллов</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -205,7 +214,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>ID покупателя</span>
+                          <span>Получатель баллов</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -268,11 +277,12 @@
                       </div>
                     </td>
                     <td>29.10.20</td>
+                    <td>234589</td>
+                    <td>Круглова Л.А.</td>
+                    <td>805903</td>
                     <td>Круглова Л.А.</td>
                     <td>234589</td>
-                    <td>805903</td>
-                    <td>234589</td>
-                    <td>Дистрибьюторская</td>
+                    <td>Наименование склада</td>
                     <td>Продажа</td>
                     <td>758739</td>
                     <td>Большой и длинный комментарий</td>
@@ -285,11 +295,12 @@
                       </div>
                     </td>
                     <td>29.10.20</td>
+                    <td>234589</td>
+                    <td>Круглова Л.А.</td>
+                    <td>805903</td>
                     <td>Круглова Л.А.</td>
                     <td>234589</td>
-                    <td>805903</td>
-                    <td>234589</td>
-                    <td>Дистрибьюторская</td>
+                    <td>Наименование склада</td>
                     <td>Продажа</td>
                     <td>758739</td>
                     <td>Большой и длинный комментарий</td>
@@ -302,11 +313,12 @@
                       </div>
                     </td>
                     <td>29.10.20</td>
+                    <td>234589</td>
+                    <td>Круглова Л.А.</td>
+                    <td>805903</td>
                     <td>Круглова Л.А.</td>
                     <td>234589</td>
-                    <td>805903</td>
-                    <td>234589</td>
-                    <td>Дистрибьюторская</td>
+                    <td>Наименование склада</td>
                     <td>Продажа</td>
                     <td>758739</td>
                     <td>Большой и длинный комментарий</td>
@@ -319,62 +331,12 @@
                       </div>
                     </td>
                     <td>29.10.20</td>
+                    <td>234589</td>
+                    <td>Круглова Л.А.</td>
+                    <td>805903</td>
                     <td>Круглова Л.А.</td>
                     <td>234589</td>
-                    <td>805903</td>
-                    <td>234589</td>
-                    <td>Дистрибьюторская</td>
-                    <td>Продажа</td>
-                    <td>758739</td>
-                    <td>Большой и длинный комментарий</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3 open_view">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Круглова Л.А.</td>
-                    <td>234589</td>
-                    <td>805903</td>
-                    <td>234589</td>
-                    <td>Дистрибьюторская</td>
-                    <td>Продажа</td>
-                    <td>758739</td>
-                    <td>Большой и длинный комментарий</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3 open_view">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Круглова Л.А.</td>
-                    <td>234589</td>
-                    <td>805903</td>
-                    <td>234589</td>
-                    <td>Дистрибьюторская</td>
-                    <td>Продажа</td>
-                    <td>758739</td>
-                    <td>Большой и длинный комментарий</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>R2020-000228</span>
-                        <a href="#" class="lt3 open_view">Просмотр</a>
-                      </div>
-                    </td>
-                    <td>29.10.20</td>
-                    <td>Круглова Л.А.</td>
-                    <td>234589</td>
-                    <td>805903</td>
-                    <td>234589</td>
-                    <td>Дистрибьюторская</td>
+                    <td>Наименование склада</td>
                     <td>Продажа</td>
                     <td>758739</td>
                     <td>Большой и длинный комментарий</td>
